# python-sdk

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md
docs/superpowers/plans/: 2026-07-21-seedance-compatibility-sdk.md
docs/superpowers/specs/: 2026-07-21-seedance-compatibility-sdk-design.md
examples/: README.md  _example_utils.py  admin_price_rules.py  create_chat_completion.py  create_image_task.py  create_images.py  create_video.py  happyhorse_video.py  images_generations.py  jimeng_legacy.py  seedance_compatibility.py  seedance_tasks.py  seedream_image.py  wan_image.py
src/globalrouter/: __init__.py  _client.py  _errors.py  _models.py  _resources.py  _streaming.py  _webhooks.py
tests/: test_client.py
