[project]
name = "globalrouter"
version = "0.1.0"
description = "Python SDK for the GlobalRouter AI model aggregation platform."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "GlobalRouter" }]
keywords = ["globalrouter", "openrouter", "openai", "sdk", "ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27,<0.29",
  "pydantic>=2.6,<3",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.10,<2",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/GlobalRouter/python-sdk"
Repository = "https://github.com/GlobalRouter/python-sdk"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/globalrouter"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP037", "UP045"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unreachable = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["anyio", "anyio.*"]
follow_imports = "skip"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
